--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^2.2.5",
     "@table-library/react-table-library": "^4.1.7",
     "axios": "^1.6.8",
+    "history": "^5.3.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.3.1",
