--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@mui/x-charts": "^7.5.1",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.6.8",
     "history": "^5.3.0",
